fix:adjust styling for header and logo on tablets

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,13 +120,27 @@ footer {
     }
 
     #logo {
-        font-size: 280%;
-        line-height: 75px;
+        font-size: 200%;
+        line-height: 35px;
         margin: 0 0.5rem;
     }
 
     /* Main content */
     main {
         /* Push main content for larger header */
-        margin-top: 150px;
+        margin-top: 77px;
     }
+}
+
+/* Media query: large devices (laptops and desktops, 992px and up) */
+@media screen and (min-width: 992px) {
+    #menu a:hover {
+        border-bottom: 1px solid #333333;
+    }
+
+    /* Main content */
+    main {
+        /* Push main content for larger header */
+        margin-top: 91px;
+    }
+}
